--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,9 @@
-[functions]
-  directory = "netlify/functions"
+[build]
+  publish = "public"
+  functions = "netlify/functions"
 
 [[redirects]]
   from = "/api/steam"
   to = "/.netlify/functions/steam"
   status = 200
+  
